[feat] 불필요하게 사용하던 클래스 메소드 삭제
1. 캡슐화가 되지 않은 정적팩토리메소드 대신 빌더 사용

2. TokenProvider.getAuthentication의 Collect.toList() -> stream.toList